@@ -471,6 +471,7 @@ extern const char *PIPESEP;
 extern xiofile_t *sock[XIO_MAXSOCK];
 
 extern int num_child;
+extern bool first_child;
 
 /* return values of xioopensingle */
 #define STAT_OK		0
