@@ -48,6 +48,9 @@ Corrections:
 
 	Reworked domain name resolution, centralized IPv4/IPv6 sorting.
 
+	Print warning about not checking CRLs in OpenSSL only in the first
+	child process.
+
 Features:
 	Total inactivity timeout option -T 0 now means 0.0 seconds; up to
 	version 1.8.0.0 it meant no total inactivity timeout.
